fix css for header so that navbar does not wrap; make a music player stop playing when its song is guessed correctly; change music router so that 401 response to song requests inactivates appropriate song list

--- a/app/bootstrap/bootstrap_custom.css
+++ b/app/bootstrap/bootstrap_custom.css
@@ -6,10 +6,28 @@
   margin-bottom: 0;
 }
 
+.navbar-nav>li>a {
+  padding-top: 15px !important;
+  padding-bottom: 15px !important;
+}
+
+.navbar-nav {
+  margin: 0 !important;
+}
+
 a.nav-link {
   color: black;
 }
 
 .body-class {
   background-color: #222;
+}
+
+.navbar-nav>li {
+    float: left !important;
+}
+
+.navbar-brand {
+  font-size: 35px !important;
+  font-family: 'Monoton';
 }
